# paya-coding-competition

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.sh  cmake_install.cmake
Presentation/: Presentation.html
Presentation/css/: index.css
presentation/: index.html
presentation/css/: index.css
presentation/fonts/B-NAZANIN/: stylesheet.css
presentation/html/: index.html
presentation/html/fonts/B-NAZANIN/: b-nazanin-demo.html
presentation/powerpoint/: presentation-powerpoint.pptx
question-1/: main.cpp  question-1  question-1-simple  simple-version  simple-version.cpp
question-10/: main.cpp  question-10
question-11/: main.cpp  question-11
question-2/: main.cpp  question-2
question-3/: main.cpp  question-3
question-4/: main.cpp  question-3  question-4
question-5/: main.cpp  question-5
question-6/: main.cpp  question-6
question-7/: main  main.cpp  question-7
question-8/: main.cpp  question-8
question-9/: main.cpp  question-9
